adequação tabela, regra de exclusão

--- a/leiloes/src/app/home/home.component.html
+++ b/leiloes/src/app/home/home.component.html
@@ -1,8 +1,28 @@
 ﻿<h1>Olá {{currentUser.firstName}}!</h1>
 <h3>Leilões:</h3>
-<ul>
-    <li *ngFor="let leilao of leiloes">
-      {{leilao.nome}} {{leilao.valorInicial}} {{leilao.responsavel}} {{leilao.abertura}} {{leilao.finalizacao}}
-    </li>
-            <a routerLink="/leilao" class="btn btn-link">Cadastrar Leilão</a>
-</ul>
+<table class="table">
+  <thead>
+    <tr>
+      <th scope="col" class="texto-tabela">Nome</th>
+      <th scope="col" class="texto-tabela">Valor Inicial</th>
+      <th scope="col" class="texto-tabela">Responsavel</th>
+      <th scope="col" class="texto-tabela">Abertura</th>
+      <th scope="col" class="texto-tabela">Finalizacao</th>
+      <th scope="col" class="texto-tabela"></th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr *ngFor="let leilao of leiloes">
+      <td class="texto-tabela">{{leilao.nome}}</td>
+      <td class="texto-tabela numerico">{{leilao.valorInicial}}</td>
+      <td class="texto-tabela">{{leilao.responsavel}}</td>
+      <td class="texto-tabela">{{leilao.abertura}}</td>
+      <td class="texto-tabela">{{leilao.finalizacao}}</td>
+      <td><a (click)="deletarLeilao(leilao.id)"
+        [hidden]="!remocaoPermitida(leilao)"
+        class="btn btn-link">Remover Leilão</a></td>
+    </tr>
+  </tbody>
+</table>
+
+<a routerLink="/leilao" class="btn btn-link">Cadastrar Leilão</a>
