--- a/leiloes/src/app/home/home.component.html
+++ b/leiloes/src/app/home/home.component.html
@@ -8,7 +8,7 @@
     <thead>
       <tr>
         <th scope="col" class="texto-tabela">Nome</th>
-        <th scope="col" class="texto-tabela">Valor Inicial</th>
+        <th scope="col" class="texto-tabela numerico">Valor Inicial</th>
         <th scope="col" class="texto-tabela">Responsável</th>
         <th scope="col" class="texto-tabela">Situação</th>
         <th scope="col" class="texto-tabela">Estado</th>
@@ -26,9 +26,6 @@
         <td (click)="deletarLeilao(leilao.id)"
           [hidden]="!remocaoPermitida(leilao)"
           class="btn btn-link texto-tabela">Remover</td>
-          <td routerLink="leilao"
-          [hidden]="!remocaoPermitida(leilao)"
-          class="btn btn-link texto-tabela">Editar</td>
         </tr>
       </tbody>
     </table>
